# rupy

./: Cargo.toml  README.md  equirect_dst.wgsl  goblin.mtl  v_color.wgsl  v_texture.wgsl
app/: Cargo.toml
app/src/: app.rs  handler.rs  main.rs  state.rs
assets/models/: cube.mtl  cube2.mtl  goblin.mtl
assets/shaders/: debug.wgsl  equirect_dst.wgsl  hdr.wgsl  v_color.wgsl  v_normal.wgsl  v_texture.wgsl
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: bind_group.rs  component.rs  entity.rs  error.rs  lib.rs  logger.rs  mesh.rs  pipeline.rs  shader.rs  surface.rs  texture.rs  vertex.rs  world.rs
core/src/assets/: loader.rs  mod.rs  watcher.rs
core/src/buffer/: glyphon_buffer.rs  mod.rs  wgpu_buffer.rs
core/src/cache/: key.rs  mod.rs  storage.rs
core/src/camera/: controller.rs  frustum.rs  mod.rs  uniform.rs
core/src/ecs/: component.rs  entity.rs  mod.rs  world.rs
core/src/gpu/: context.rs  frame_buffer.rs  global.rs  mod.rs  wgpu_buffer.rs  wgpu_renderer.rs
core/src/renderer/: environment.rs  glyphon_renderer.rs  material.rs  mesh.rs  mod.rs  model.rs  traits.rs  vertex.rs  wgpu_renderer.rs
core/src/rendering/: environment.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  render_target.rs  shader.rs  traits.rs  vertex.rs
core/src/resources/: bind_group.rs  buffer.rs  cache.rs  cache_key.rs  mod.rs  texture.rs
core/src/text/: glyphon_buffer.rs  glyphon_renderer.rs
core/src/util/: error.rs  event_bus.rs  mod.rs
engine/: Cargo.toml
engine/src/: lib.rs  prelude.rs
engine/src/assets/: loader.rs  mod.rs  watcher.rs
engine/src/camera/: controller.rs  frustum.rs  mod.rs  model.rs  projection.rs  uniform.rs
engine/src/ecs/: component.rs  entity.rs  mod.rs  physics.rs  world.rs
engine/src/gpu/: mod.rs  wgpu_buffer.rs  wgpu_renderer.rs
engine/src/rendering/: aabb.rs  chunk.rs  debug.rs  environment.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  render3d.rs  shader.rs  surface.rs  terrain.rs  traits.rs  vertex.rs
engine/src/resources/: bind_group.rs  cache.rs  cache_key.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs
engine/src/text/: glyphon_buffer.rs  glyphon_renderer.rs  mod.rs  text_region.rs
engine/src/util/: error.rs  event_bus.rs  helpers.rs  mod.rs  time.rs
