[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
pollster = "0.4.0"
tokio = { version = "1.40.0", features = ["full"] }
winit = { version = "0.30.5", features = ["rwh_06", "serde"] }
wgpu = { version =  "22.0.0" , features = ["serde"] }
cgmath = "0.18.0"
bytemuck = "1.22.0"
