[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
wgpu =  "24.0.3"
winit = "0.30.9"
cgmath = "0.18.0"
pollster = "0.4.0"
bytemuck = "1.22.0"
crossbeam = "0.8.4"
log = { version = "0.4.27", optional = true }
env_logger = { version = "0.11.8", optional = true }
glyphon = "0.8"
tokio = { version = "1.44.2",  features = ["full"] }


[features]
default = ["logging"]
logging = ["env_logger", "log"]

